<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/downPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/down_payment"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/interestRate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carPrice" />

    <TextView
        android:id="@+id/interestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/interest_rate"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/loanPeriod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downPayment" />

    <TextView
        android:id="@+id/loanPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/loan_period"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestRate" />

    <TextView
        android:id="@+id/carPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/car_price"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/carPriceValue"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/carPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/downPaymentValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/interestRateValue"
        app:layout_constraintStart_toEndOf="@+id/downPayment"
        app:layout_constraintTop_toBottomOf="@+id/carPriceValue" />

    <EditText
        android:id="@+id/interestRateValue"
        android:layout_width="221dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/loanPeriodValue"
        app:layout_constraintStart_toEndOf="@+id/interestRate"
        app:layout_constraintTop_toBottomOf="@+id/downPaymentValue" />

    <EditText
        android:id="@+id/loanPeriodValue"
        android:layout_width="233dp"
        android:layout_height="40dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/loanPeriod"
        app:layout_constraintTop_toBottomOf="@+id/interestRateValue" />

    <Button
        android:id="@+id/buttonCal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginLeft="196dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="113dp"
        android:layout_marginRight="113dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loanPeriodValue" />

    <TextView
        android:id="@+id/carLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="149dp"
        android:text="@string/car_loan"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loanPeriod" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/interest"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carLoan" />

    <TextView
        android:id="@+id/monthlyRepayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/monthly_repayment"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/carLoanValue"
        android:layout_width="155dp"
        android:layout_height="27dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/carLoan"
        app:layout_constraintTop_toBottomOf="@+id/buttonCal" />

    <TextView
        android:id="@+id/interestValue"
        android:layout_width="192dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/carLoanValue" />

    <TextView
        android:id="@+id/monthlyRepaymentValue"
        android:layout_width="166dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/monthlyRepayment"
        app:layout_constraintTop_toBottomOf="@+id/interestValue" />

</androidx.constraintlayout.widget.ConstraintLayout>